--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
+.loadingDiv{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  
+}
+.userGrid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  place-items: center;
   text-align: center;
-}
+  gap: 20px;
+  margin: 40px 300px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.userContainer{
+  width: 300px;
+  height: 250px;
+  background-color: rgb(226, 220, 220);
 }
+.image{
+  width: 150px;
+  height: 150px;
+  border: radius 50px;
+  margin: auto;
+  margin-top: 6px;
+  
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
